# PixelMind

./: .env.example  .gitignore  .replit  admin_2fa.json  admin_accounts.json  admin_emails.json  chat_log.json  invite_emails.json  main.py  manifest.json  pyproject.toml  replit.md  replit.nix  requirements.txt  sw.js  users.json  web_block.json  web_payments.json  web_users.json
attached_assets/: Pasted--Flux-AI-Telegram-OpenRouter-Replit--1773594946694_1773594946695.txt
mods/: browser-agent.pixelmod
templates/: admin.html  admin_classic.html  create_mod.html  read_mod.html  reset.html  web_chat.html
