[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "flask>=3.1.3",
    "gtts>=2.5.4",
    "gunicorn>=25.3.0",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "speechrecognition>=3.15.2",
]
